Update & Delete CRUD functions working

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Static Site</title>
   </head>
   <body>
-    <nav class="navbar navbar-fixed navbar-toggleable-lg navbar-dark bg-dark">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar fixed-top navbar-toggleable-lg navbar-dark bg-dark">
+      <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand" href="#">Navbar</a>
@@ -32,12 +32,16 @@
     </div>
       <div class="container" id="site-body"></div>
         <div class="row">
-          <div class="col-sm-2"></div>
-          <div class="col-sm-8">
+          <div class="col-sm-1"></div>
+          <div class="col-sm-10">
             <div id="blog-content"></div>
           </div>
         </div>
-     </div>  
+     </div> 
+    <footer class="navbar navbar-dark bg-dark">
+      <a href="">Home</a>
+      <a href="">About</a>
+    </footer> 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
