--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
         <h1 id="blog-title">Ajax Blog</h1>  
       </div>
     </div>
-      <div class="container" id="site-body"></div>
-        <div class="row">
-          <div class="col-sm-1"></div>
-          <div class="col-sm-10">
-            <div id="blog-content"></div>
-          </div>
+    <div class="container" id="site-body"></div>
+      <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10">
+          <div id="blog-content"></div>
         </div>
-     </div> 
+      </div>
+    </div>
+  
+    
     <footer class="navbar navbar-dark bg-dark">
       <a href="">Home</a>
       <a href="">About</a>
@@ -46,6 +48,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="text/javascript" src="scripts/templates.js"></script>
+    <script type="text/javascript" src="scripts/index.js"></script>
+    <script type="text/javascript" src="scripts/add.js"></script>
+    <script type="text/javascript" src="scripts/show.js"></script>
+    <script type="text/javascript" src="scripts/update.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
